--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "jest-junit": "^11.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "regenerator-runtime": "^0.14.0",
     "style-loader": "^1.2.1",
     "webpack-cli": "^3.3.12",
     "cypress": "^9.5.0"
@@ -37,7 +36,7 @@
     "@babel/core": "^7.11.6",
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
-    "@testing-library/react": "^11.0.4",
+    "@babel/plugin-transform-runtime": "^7.24.1",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.1.0",
     "babel-preset-env": "^1.7.0",
